# curve-trees

./: .gitignore  Cargo.toml  PRF.md  fmt_estimates.sh  gen_fmt_estimates.sh  proof_constraints.txt  readme.md  todo.md
.github/workflows/: check-main.yml
bulletproofs/: Cargo.toml  generalized-bulletproofs.md
bulletproofs/benches/: generators.rs  r1cs.rs
bulletproofs/src/: errors.rs  generators.rs  inner_product_proof.rs  lib.rs  transcript.rs  util.rs
bulletproofs/src/pasta/curves/: tests.rs
bulletproofs/src/pasta/fields/: tests.rs
bulletproofs/src/r1cs/: constraint_system.rs  linear_combination.rs  mod.rs  proof.rs  prover.rs  verifier.rs
bulletproofs/tests/: r1cs.rs  r1cs_vec.rs
pasta/: Cargo.toml
pasta/src/curves/: pallas.rs  tests.rs  vesta.rs
pasta/src/fields/: tests.rs
relations/: Cargo.toml
relations/benches/: accumulator.rs  batched_select_rerandomize.rs  coin.rs  select_rerandomize.rs
relations/src/: batched_curve_tree_prover.rs  batched_curve_tree_verifier.rs  coin.rs  curve.rs  curve_tree.rs  curve_tree_prover.rs  curve_tree_verifier.rs  lib.rs  lookup.rs  permissible.rs  prf_coin.rs  range_proof.rs  rerandomize.rs  select.rs  select_and_rerandomize.rs  select_rerandomize.rs  single_level_select_and_rerandomize.rs
relations/tests/: batched_curve_tree.rs  curve_tree.rs
