[package]
name = "pasta"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-std = { version = "0.3.0" }

[dev-dependencies]
criterion = "0.3"
ark-algebra-test-templates = "0.3.0"