[package]
name = "pasta"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
ark-ec = { version = "0.3.0"}
ark-ff = { version = "0.3.0"}
ark-std = { version = "0.3.0" }

[dev-dependencies]
criterion = "0.3"
ark-algebra-test-templates = "0.3.0"

[features]
default = ["parallel", "asm"]
asm = ["ark-ff/asm"]
parallel = ["ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel"]