[package]
name = "relations"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8", default-features = false }
bulletproofs = { path = "../bulletproofs", default-features = false, features = ["std"]}
ark-ff = { version = "0.3.0"}
ark-ec = { version = "0.3.0"}
ark-serialize = { version = "0.3.0" } 
ark-std = { version = "0.3.0"}
merlin = { version = "2", default-features = false }
rust-crypto = "^0.2"
ark-crypto-primitives = { version = "0.3.0" } 
digest = "0.9"
blake2 = "0.9"
rayon = {verison = "1.5.3", optional = true}

[dev-dependencies]
criterion = "0.3"
pasta = { path = "../pasta", default-features = false }

[features]
default = ["asm", "parallel"]
asm = ["ark-ff/asm", "bulletproofs/asm", "pasta/asm"]
parallel = ["rayon", "ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel", "bulletproofs/parallel", "pasta/parallel"]
bench_prover = []

[[bench]]
name = "select_rerandomize"
harness = false

[[bench]]
name = "coin"
harness = false

[profile.release]
lto = true

[build]
rustflags = "-C target-cpu=native" # check if this actually improves benchmarks