[package]
name = "relations"
version = "0.1.0"
edition = "2021"

[dependencies]
sha3 = { version = "0.9.1", default-features = false }
rand = { version = "0.8", default-features = false }
bulletproofs = { path = "../bulletproofs", default-features = false, features = ["std"]}
ark-ff = { version = "0.4"}
ark-ec = { version = "0.4"}
ark-serialize = { version = "0.4" } 
ark-std = { version = "0.4"}
merlin = { version = "2", default-features = false }
ark-crypto-primitives = { version = "0.4", features = ["signature"]}
digest = "0.9"
blake2 = "0.10"
rayon = {version = "1.5.3", optional = true}

[dev-dependencies]
criterion = "0.3"
ark-pallas = "0.4"
ark-vesta = "0.4"
ark-secp256k1 = "0.4"
ark-secq256k1 = "0.4"

[features]
default = ["asm", "parallel"]
asm = ["ark-ff/asm", "bulletproofs/asm"]
parallel = ["rayon", "ark-ec/parallel", "ark-ff/parallel", "ark-std/parallel", "bulletproofs/parallel"]
bench_prover = []
detailed_benchmarks = []
usenix = ["bench_prover"]
table1 = ["usenix"]
table2 = ["usenix"]
table3 = ["usenix"]
all-tables = ["table1", "table2", "table3"]

[[bench]]
name = "batched_select_rerandomize"
harness = false

[[bench]]
name = "select_rerandomize"
harness = false

[[bench]]
name = "coin"
harness = false

[[bench]]
name = "accumulator"
harness = false

[profile.release]
lto = true

[build]
 # Adds architecture specific optimizations including those enabling the asm backend for ark_ff. It could potentially cause slowdowns from other features.
rustflags = "-C target-cpu=native"
 # You could alternatively add support for the asm backend through "-C target-feature=+bmi2,+adx", but the binary would only run on systems supporting these instructions.